Employee register user account and company account

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,4 @@
 <h1>Trampos</h1>
 
-<h3>As melhores vaga de emprego da internet estão aqui</h3>
+<h3>As melhores vagas de emprego da internet estão aqui!</h3>
 
