--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,3 +2,6 @@
 
 <h3>As melhores vagas de emprego da internet estão aqui!</h3>
 
+<%= link_to 'Empresas cadastradas', companies_path %>
+
+<%= link_to 'Vagas cadastradas', job_ads_path %>
