WIP: form for employees and companies using nested attributes

--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -1,5 +1,5 @@
 <% if @companies.empty? %>
-    <p>Nenhuma vaga cadastrada</p>
+    <p>Nenhuma empresa cadastrada</p>
 <% else %>
     <dl>
       <% @companies.each do |company| %>
